Added rerouting to index page

--- a/recipes/potatosalad.html
+++ b/recipes/potatosalad.html
@@ -23,5 +23,6 @@
         <li>While potatoes cook, place eggs in a saucepan and cover with cold water. Bring water to a boil; cover, remove from heat, and let eggs stand in hot water for 10 to 12 minutes. Remove from hot water, cool, peel and chop.</li>
         <li>Combine the potatoes, eggs, celery, onion, relish, mayonnaise, mustard, garlic salt, celery salt, and pepper in a large bowl. Mix together well and refrigerate until chilled.</li>
     </ol>
+    <a href="../index.html">Return to main page</a>
 </body>
 </html>
