--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        * {
+            border: 2px solid red;
+        }
+    </style>
     <meta charset="UTF-8">
     <title>Recipe Website</title>
 </head>
